fix z-index for card count and add debug option

--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ html, body {
   width: 90%;
   color: #fff;
   display: none;
-  z-index: 50;
   background: #999;
   padding: 1% 0;
 }
